新增已存在文件秒传功能
